--- a/src/components/widgets/Navbar.astro
+++ b/src/components/widgets/Navbar.astro
@@ -1,4 +1,5 @@
 ---
+import { cn } from "@/lib/utils";
 import ThemeToggle from "@components/widgets/themeToggle.astro";
 
 interface Props {
@@ -11,7 +12,7 @@ const { title } = Astro.props;
 const { routes } = Astro.props;
 ---
 
-<nav class="border-gray-200 py-2">
+<nav class="border-gray-200 px-2 py-2 xl:px-0">
   <div class="mx-auto flex max-w-screen-xl flex-wrap items-center justify-between">
     <a href={baseUrl} class="group flex items-center gap-3 outline-none">
       <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" viewBox="0 0 2 2">
@@ -20,16 +21,17 @@ const { routes } = Astro.props;
         <rect fill="#cb4f57" x="0" y="1" width="1" height="1"></rect>
         <rect fill="#7a1745" x="1" y="1" width="1" height="1"></rect>
       </svg>
-      <span
-        class="whitespace-nowrap rounded-lg px-4 py-2 text-2xl font-semibold transition-colors group-hover:bg-primary group-hover:text-primary-foreground group-focus-visible:bg-accent group-focus-visible:text-accent-foreground"
-        >{title ?? "Playground"}</span
+      <h1
+        class="group-focus-visible:text-prbg-primary-foreground whitespace-nowrap rounded-lg px-4 py-2 text-2xl font-semibold transition-colors group-hover:bg-primary group-hover:text-primary-foreground group-focus-visible:bg-primary group-focus-visible:text-primary-foreground"
       >
+        {title ?? "Playground"}
+      </h1>
     </a>
 
     <button
       data-collapse-toggle="navbar-default"
       type="button"
-      class="inline-flex h-8 w-8 items-center justify-center rounded-lg text-sm text-gray-500 hover:bg-gray-100 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus-visible:ring-gray-600 md:hidden"
+      class="focus:ring-seconary inline-flex h-8 w-8 items-center justify-center rounded-lg bg-primary text-sm text-primary-foreground shadow outline-none hover:bg-primary/80 focus:ring-4 md:hidden"
       aria-controls="navbar-default"
       aria-expanded="false"
     >
@@ -51,19 +53,26 @@ const { routes } = Astro.props;
     </button>
 
     <div
-      class="hidden w-full flex-col font-medium md:flex md:w-auto md:flex-row md:gap-8"
+      class="hidden w-full flex-col font-medium md:flex md:w-auto md:flex-row md:gap-4"
       id="navbar-default"
     >
       {
-        routes.map((route) => (
-          <a
-            href={route.url}
-            class="block rounded-lg px-4 py-2 outline-none transition-colors hover:bg-primary hover:text-primary-foreground focus-visible:bg-accent focus-visible:text-accent-foreground"
-            aria-current="page"
-          >
-            {route.text}
-          </a>
-        ))
+        routes.map((route) => {
+          const isCurrent = Astro.url.pathname === route.url;
+
+          return (
+            <a
+              href={route.url}
+              class={cn(
+                "block rounded-lg px-4 py-2 outline-none transition-colors hover:bg-primary hover:text-primary-foreground focus-visible:bg-primary focus-visible:text-primary-foreground",
+                { "bg-primary text-primary-foreground": isCurrent }
+              )}
+              aria-current={isCurrent ? "page" : false}
+            >
+              {route.text}
+            </a>
+          );
+        })
       }
       <ThemeToggle />
     </div>
